src/test/deca/syntax/invalid/resultats/test39_decl_method-lex.res
'class': [@0,326:330='class',<7>,15:0]
IDENT: [@1,332:332='A',<26>,15:6]
'{': [@2,334:334='{',<36>,15:8]
IDENT: [@3,337:343='private',<26>,16:1]
IDENT: [@4,345:347='int',<26>,16:9]
IDENT: [@5,349:351='fct',<26>,16:13]
'(': [@6,352:352='(',<34>,16:16]
')': [@7,353:353=')',<35>,16:17]
'{': [@8,354:354='{',<36>,16:18]
'}': [@9,355:355='}',<37>,16:19]
'}': [@10,357:357='}',<37>,17:0]
